--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "ethers": "^5.5.2",
+    "ipfs": "^0.61.0",
+    "ipfs-http-client": "^55.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2",
     "web3": "^1.6.1"
   },
