--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "ethers": "^5.5.2",
     "graphql": "^16.2.0",
+    "ipfs-core": "^0.13.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
