--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "graphql": "^16.2.0",
     "ipfs-core": "^0.13.0",
     "ipfs-http-client": "^55.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "16.7.0-alpha.2",
+    "react-dom": "16.7.0-alpha.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2",
     "web3": "^1.6.1"
